--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@erick_nuque/lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "https://docs.npmjs.com/files/package.json#description-1",
   "main": "assertEqual.js",
   "directories": {
     "test": "test"
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/enukeWebDev/lotide.git"
   },
-  "author": "Roderick Nuque",
+  "author": "https://docs.npmjs.com/files/package.json#people-fields-author-contributors",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/enukeWebDev/lotide/issues"
